# DE32-3rd_team5

./: .gitignore  Dockerfile  README.md  pyproject.toml
dags/: agg.py  data_export.py  data_generator.py  data_generator_dag.py  data_partition_dag.py  location_change.py  report.py  report_dag.py  tally_dag.py  trans_loc.py
data/: data.py
data/parquet/addr=경기도/gender=Male/: part-00000-c22cba99-c45c-45d9-af73-a47bed600c35.c000.snappy.parquet  part-00000-c4a4e931-bfa6-4355-bae4-f8a3c08f5f03.c000.snappy.parquet
data/parquet/addr=경상남도/gender=Female/: .part-00000-b1085873-3d8a-4f68-a9b1-c646bb301681.c000.snappy.parquet.crc
data/parquet/addr=경상남도/gender=Male/: .part-00000-79012749-84b6-48bc-9155-00e1291fd609.c000.snappy.parquet.crc  part-00000-74a352a9-9c28-48e8-97cd-cec42b8c53af.c000.snappy.parquet  part-00000-b1085873-3d8a-4f68-a9b1-c646bb301681.c000.snappy.parquet
data/parquet/addr=경상북도/gender=Female/: part-00000-79012749-84b6-48bc-9155-00e1291fd609.c000.snappy.parquet
data/parquet/addr=경상북도/gender=Male/: .part-00000-61088e78-42d5-499d-bf44-c9e8215652fe.c000.snappy.parquet.crc  .part-00000-c4a4e931-bfa6-4355-bae4-f8a3c08f5f03.c000.snappy.parquet.crc  part-00000-61088e78-42d5-499d-bf44-c9e8215652fe.c000.snappy.parquet  part-00000-79012749-84b6-48bc-9155-00e1291fd609.c000.snappy.parquet
data/parquet/addr=대전광역시/gender=Female/: part-00000-79012749-84b6-48bc-9155-00e1291fd609.c000.snappy.parquet
pyspark/: origin_data_partition.py  score_agg.py
src/de32_3rd_team5/: .module_llama.py.swp  TODO.md  __init__.py  address.org1  address.py  app.py  geoutil.py  llama_test.py  main.org  main.org2  main.py  module_llama.py  pedestrian.py  test.py  test_data.org  test_data.py  test_data.py.org  test_data1.py  test_date.py
src/de32_3rd_team5/public/: chat.py  manager_app.py  recognition.py
src/de32_3rd_team5/utils/: geoutil.py
src/de32_3rd_team5/worker/: data_generator.py
tests/: test_run.py  test_util.py
(+16 files in other folders)
