[project]
name = "DE32-3rd_team5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
    {name = "hun0219", email = "gsw98000@gmail.com"},
]
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "torchaudio>=2.4.1",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "transformers>=4.45.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
