[project]
name = "DE32-3rd_team5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
]
dependencies = [
    "face-recognition>=1.3.0",
    "cmake==3.25.2",
    "dlib==19.24.2",
    "streamlit==1.29.0",
    "streamlit-webrtc>=0.47.9",
    "opencv-python>=4.9",
    "av>=12.3.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
